appinventor/deployment/kubernetes/appinventor/appinventor-deployment.yaml
# App Inventor Server Deployment (Phase 4)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appinventor-server
  namespace: appinventor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appinventor-server
  template:
    metadata:
      labels:
        app: appinventor-server
    spec:
      containers:
      - name: appinventor
        image: appinventor-server:phase4-latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: appinventor-service
  namespace: appinventor
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  selector:
    app: appinventor-server
